2026_kubecon/webapp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: keycloak
spec:
  selector:
    app: webapp
  ports:
  - port: 8080
    targetPort: 8080
